memnambahkan fitur di game-suwit index.html

--- a/game-suwit/index.html
+++ b/game-suwit/index.html
@@ -12,6 +12,9 @@
 	<br>
 	<br>
 	<h4>Terima kasih sudah bermain!</h4>
+	<br>
+	<br>
+	<h4><a href="https://github.com/nandapq">Kunjungi Github Nandapq</a></h4>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
